<resources>
    <string name="app_name">MyNavigationDrawerApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_my_application">Welcome to My Application</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="favourite">Favourite</string>
    <string name="title_activity_archive">Archive</string>
    <string name="archive">Archive</string>
    <string name="item">Item</string>
    <string name="trash">trash</string>
    <string name="spam">Spam</string>
    <string name="labels">Labels</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="menu_sent">menu sent</string>
    <string name="menu_inbox">menu inbox</string>
    <string name="menu_favorite">menu favorite</string>
    <string name="menu_trash">menu trash</string>
</resources>